--- a/src/template.html
+++ b/src/template.html
@@ -13,6 +13,15 @@
       <div class="board">
         <h2>Player's Board</h2>
         <div class="grid" id="player-board"></div>
+
+        <!-- Ships below player board -->
+        <div class="ships-container">
+          <div class="ship" id="ship-2" data-length="2"></div>
+          <div class="ship" id="ship-3-1" data-length="3"></div>
+          <div class="ship" id="ship-3-2" data-length="3"></div>
+          <div class="ship" id="ship-5" data-length="5"></div>
+          <div class="ship" id="ship-6" data-length="6"></div>
+        </div>
       </div>
 
       <!-- Computer's Board -->
